--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   font-family: 'Opens Sans', sans-serif;
 }
 
-html,body.#root{
-  background-color: #EFEFEF;
+html,body,#root{
+  background-color: #dbdbdb;
   height: 100%;
 }
